* [Changed] Updated code to language features available in Java17